sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:17: error: value +* is not a member of Int
    setValeur(i-compt+*ecart,v)
                     ^